--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body {
+  background-image: url('https://files.oaiusercontent.com/file-whcNa9qwpmCPkb0p8XGTC6nH?se=2024-01-16T16%3A51%3A55Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3Dd2e9ef44-1452-4f33-99f7-9416dc7585ac.webp&sig=CtdZIZ9asGNYxVQwEGaOGnKt1YZkZJcKWpucS%2BUOUlA%3D');
+  background-repeat: repeat;
+}
+
+header {
+  background-color: rgb(131, 113, 105);
+  color: beige;
+  padding: 30px;
+  text-align: center;
+}
+
 .card-img-top {
   width: 100%;
   height: 200px;
@@ -20,7 +32,12 @@
   margin-top: auto;
 }
 
+.card {
+  background-color: rgba(255, 255, 255, 0.566);
+  box-shadow: 5px 8px 65px -15px rgba(66, 68, 90, 0.7);
+}
+
 .price {
-  color: rgb(42, 172, 227);
+  color: rgb(129, 81, 61);
   font-weight: bold;
 }
